# ProgrammingUtilites

./: .directory  .gitignore  CMakeLists.txt  Makefile  README.md  index.md  platform.mk  setup.cfg  setup.py  setup.py.in
.github/workflows/: codeql-analysis.yml  push.yml
build_docs/doctrees/: environment.pickle  index.doctree
build_docs/doctrees/extramath/: bessels.doctree  hypergeom.doctree  index.doctree
build_docs/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
build_docs/html/_sources/: index.rst.txt
build_docs/html/_sources/extramath/: bessels.rst.txt  hypergeom.rst.txt
build_docs/html/extramath/: bessels.html  hypergeom.html  index.html
connormath/: CMakeLists.txt  Makefile  Makefile~  __init__.py  setup.py
connormath.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
connormath/connormath/funcs/: funcsmodule.c~
connormath/connormath/stats/: __init__.py
connormath/docs/source/: conf.py  index.rst
connormath/funcs/: funcsmodule.c
connormath/include/: #roots.h#  CMakeLists.txt  connormath.h  roots.h
connormath/ints/: intsmodule.c
connormath/roots/: CMakeLists.txt  CMakeLists.txt~  Makefile  polyroots.c  polyroots.c.in~  roots.c  rootsmodule.c
connormath/src/: #Makefile#  Makefile  Makefile~
connormath/src/roots/: Makefile  brent-dekker.c  polyroots.c  roots.c  roots.c~
connormath/src/tests/: Makefile  Makefile~  run_tests.c  test  test.c  test.h  test_roots.c  test_roots.c~
connormath/src/utils/: Makefile  utils.c  utils.c~
connormath/stats/: cstatsmodule.c
connormath/tests/: .#run_tests.c  Makefile  test.h  test_cprogs.py  test_roots  test_utils
connormath/tests/ctests/: CMakeLists.txt  CMakeLists.txt~  test_roots.c  test_utils.c
connormath/utils/: CMakeLists.txt  Makefile  utils.c
devtools/conda-envs/: test_env.yaml
devtools/scripts/: create_conda_env.py
docs/: conf.py  index.md
docs/extramath/: hypergeom.rst  index.rst  integrated.rst
docs/source/: conf.py
example_pypack/: Makefile  delete_files.py  setup.cfg~
extramath/: CMakeLists.txt  CMakeLists.txt~  __init__.py  _version.py
extramath/include/: CMakeLists.txt  bessels.h  elliptic.h  erf_precomp.h  extramath.h  extramath_srcdefs.h  hypergeometric.h  integer.h  integrals.h  integrated.h  longlinalg.h  numbertheory_frac.h  numbertheory_int.h  polynomials.h  roots.h  solver.h  spheroidal.h  statistics.h  utils.h  zeta.h
extramath/pybindings/: CMakeLists.txt  bessels.c
extramath/src/: CMakeLists.txt  bessels.c  bessels.c~  beta.c  beta.c~  decompose.c  decompose.c~  eigenvals.c  eigenvals.c~  erf.c  erf.c~  gamma.c  gamma.c~  gauss_quad.c  gauss_quad.c~  hypergeom.c  hypergeom.c~  integer.c  integer.c~  integrals_nd.c  integrals_nd.c~  integrated.c  integrated.c~  matarith.c  matarith.c~  matprops.c  matprops.c~  polynomials.c  polynomials.c~  polyroots.c  polyroots.c~  polyroots.pre.c  polyroots.pre.c~  riemann_int.c  riemann_int.c~  tanhsinh.c  tanhsinh.c~  utils.c  utils.c~  zeta.c  (+1 more)
extramath/tests/: CMakeLists.txt  test.h  test_bessels.c  test_bessels.pre.c  test_gamma.c  test_integrals.c~  test_integrals.pre.c  test_integrals.pre.c~  test_poly.c
extramath/tests/ctests/: CMakeLists.txt
mymath/: coords.py  mymath.py  regression.py
mymath/stats/: __init__.py  binomial.py  tdist.py
templates/connormath~/: setup.cfg~
templates/connormath~/connormath/roots/: rootsmodule.c
templates/connormath~/devtools/conda-envs/: test_env.yaml
templates/connormath~/include/: roots.h
templates/mymath/: __init__.py  diffeq.py  dlt.py  integrate.py
templates/mymath/stats/: discrete.py  normaldist.py  stats.py  tdist.py
